# Optimizador-de-Rutas-en-Rust

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
tests/: e2e_test.rs  integration_test.rs  stress_test.rs
