[package]
name = "optimizador-de-rutas"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] } # Para peticiones HTTP
tokio = { version = "1", features = ["full"] }      # Para operaciones asíncronas
serde = { version = "1.0", features = ["derive"] } # Para deserializar JSON
serde_json = "1.0"
petgraph = "0.6" # Una librería de grafos para la implementación de Dijkstra

[[bin]]
name = "optimizador-de-rutas"
path = "src/main.rs"

[profile.release]
args = [
    "-s",
    "-12.11797,-76.98541",
    "-e",
    "-12.10000,-76.99000",
]

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"